Fix gap

--- a/kpm/kpm-frontend/src/Menu.scss
+++ b/kpm/kpm-frontend/src/Menu.scss
@@ -16,6 +16,7 @@
     width: 100%;
     max-width: 80rem;
     margin: 0 auto;
+    gap: 0 1rem;
   }
 
   li {
